@@ -1,8 +1,14 @@
 2007-10-22  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/vmspecific/java/lang/VMProcess.java: Removed.
+
+	* libraries/javalib/vmspecific/Makefile.am (dist_vminterface_JAVA): Removed java/lang/VMProcess.java.
+
+2007-10-22  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/vmspecific/java/lang/VMClassLoader.java: Removed.
 
-	* libraries/javalib/vmspecific/Makefile.am (dist_vminterface_JAVA): Removed /java/lang/VMClassLoader.java.
+	* libraries/javalib/vmspecific/Makefile.am (dist_vminterface_JAVA): Removed java/lang/VMClassLoader.java.
 
 	* libraries/clib/native/ClassLoader.c (java_lang_VMClassLoader_getPrimitiveClass): 
 	Renamed from java_lang_VMClassLoader_getPrimitiveClass0. 
